--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -305,7 +305,7 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_HoloLens,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_HoloLens,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources
 StaticMesh=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings
-MeshNaniteSettings=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings
+MeshNaniteSettings=
 SceneCapture2D=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 
 [ContentBrowser]
@@ -353,7 +353,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/StepStool
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -420,7 +420,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Attic
 LastLevel=/Game/Living_Room
 LastLevel=/Game/Attic
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -437,7 +437,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 GeneralProjectSettings="\"Object\" "
@@ -1948,12 +1948,12 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low
-MRUItem1=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem2=/Game/Group_Assets/Aziz/Assets/StepStool/MI_StepStool
-MRUItem3=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_BaseColor
-MRUItem4=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_StepStool
-MRUItem5=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low
+MRUItem2=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem3=/Game/Group_Assets/Aziz/Assets/StepStool/MI_StepStool
+MRUItem4=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_BaseColor
+MRUItem5=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_StepStool
 MRUItem6=/Game/Group_Assets/Aziz/Assets/Metronome/Metronome_low
 MRUItem7=/Game/Group_Assets/Aziz/Assets/Metronome/MI_Metronome
 MRUItem8=/Game/Group_Assets/Aziz/Assets/RockingChair/MI_RockingChair
@@ -2017,6 +2017,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFactorySphereReflectionCapture_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low.StepStool_low;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Metronome/Metronome_low.Metronome_low;
 RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Ceiling.Ceiling;
@@ -2036,7 +2037,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Picture_Frame_uijufcgiw/S_Wooden
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Picture_Frame_uiivbhniw/S_Wooden_Picture_Frame_uiivbhniw_lod3_Var1.S_Wooden_Picture_Frame_uiivbhniw_lod3_Var1;
 RecentlyPlaced=/Script/Engine.SceneCapture2D;
 RecentlyPlaced=/Script/Engine.SceneCaptureCube;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Clay_Vase_udfldgohw/S_Clay_Vase_udfldgohw_lod0.S_Clay_Vase_udfldgohw_lod0;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
