--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -353,7 +353,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1305,6 +1305,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Actor.Rendering=True
 Actor.Replication=True
 Actor.Collision=True
@@ -1824,7 +1825,6 @@ SceneCapture2D.Replication=True
 SceneCapture2D.HLOD=True
 SceneCapture2D.Networking=True
 SceneCapture2D.Input=True
-Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1920,7 +1920,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
@@ -2017,6 +2017,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFactorySphereReflectionCapture_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low.StepStool_low;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Metronome/Metronome_low.Metronome_low;
@@ -2036,7 +2037,6 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Picture_Frame_uijufcgiw/S_Wooden_Picture_Frame_uijufcgiw_lod3_Var1.S_Wooden_Picture_Frame_uijufcgiw_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Picture_Frame_uiivbhniw/S_Wooden_Picture_Frame_uiivbhniw_lod3_Var1.S_Wooden_Picture_Frame_uiivbhniw_lod3_Var1;
 RecentlyPlaced=/Script/Engine.SceneCapture2D;
-RecentlyPlaced=/Script/Engine.SceneCaptureCube;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
