--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -315,7 +315,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Megascans/3D_Assets/Rusty_Fire_Poker_wlkn
 ContentBrowserTab1.SelectedPaths=/Game/Megascans/Surfaces/Cracked_Wall_Plaster_ulgkfg3lw
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Charlotte/Assets/Shield
-ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/StepStool
+ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Chandelier
 None=======
 None=======
 None=======
@@ -1306,6 +1306,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Actor.Rendering=True
 Actor.Replication=True
 Actor.Collision=True
@@ -1825,7 +1826,6 @@ SceneCapture2D.Replication=True
 SceneCapture2D.HLOD=True
 SceneCapture2D.Networking=True
 SceneCapture2D.Input=True
-Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1949,26 +1949,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Chandelier/MM_Chandelier
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low_Material_OcclusionRoughnessMetallic
-MRUItem3=/Game/Living_Room
-MRUItem4=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low
-MRUItem5=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem6=/Game/Group_Assets/Aziz/Assets/StepStool/MI_StepStool
-MRUItem7=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_BaseColor
-MRUItem8=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_StepStool
-MRUItem9=/Game/Group_Assets/Aziz/Assets/Metronome/Metronome_low
-MRUItem10=/Game/Group_Assets/Aziz/Assets/Metronome/MI_Metronome
-MRUItem11=/Game/Group_Assets/Aziz/Assets/RockingChair/MI_RockingChair
-MRUItem12=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_Sofa2m
-MRUItem13=/Game/Group_Assets/Aziz/Assets/Sofa1m/MI_Sofa1m
-MRUItem14=/Game/Group_Assets/Aziz/Assets/Pillows/MI_SofaPillows
-MRUItem15=/Game/Group_Assets/Aziz/Assets/Piano/MI_Piano
-MRUItem16=/Game/Group_Assets/Aziz/Assets/Lamp/MM_LampBody
-MRUItem17=/Game/Group_Assets/Aziz/Assets/Metronome/Metronome_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem18=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/rendertarget
-MRUItem19=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Chandelier/ChandelierGlass_low
+MRUItem1=/Game/Living_Room
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Chandelier/MM_Chandelier
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low_Material_OcclusionRoughnessMetallic
+MRUItem5=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low
+MRUItem6=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem7=/Game/Group_Assets/Aziz/Assets/StepStool/MI_StepStool
+MRUItem8=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_BaseColor
+MRUItem9=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_StepStool
+MRUItem10=/Game/Group_Assets/Aziz/Assets/Metronome/Metronome_low
+MRUItem11=/Game/Group_Assets/Aziz/Assets/Metronome/MI_Metronome
+MRUItem12=/Game/Group_Assets/Aziz/Assets/RockingChair/MI_RockingChair
+MRUItem13=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_Sofa2m
+MRUItem14=/Game/Group_Assets/Aziz/Assets/Sofa1m/MI_Sofa1m
+MRUItem15=/Game/Group_Assets/Aziz/Assets/Pillows/MI_SofaPillows
+MRUItem16=/Game/Group_Assets/Aziz/Assets/Piano/MI_Piano
+MRUItem17=/Game/Group_Assets/Aziz/Assets/Lamp/MM_LampBody
+MRUItem18=/Game/Group_Assets/Aziz/Assets/Metronome/Metronome_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem19=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/rendertarget
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2018,6 +2018,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Chandelier/MM_Chandelier.MM_Chandelier;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFactorySphereReflectionCapture_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low.StepStool_low;
@@ -2037,7 +2038,6 @@ RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1.MM_Pictures_Ins
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Picture_Frame_uijufcgiw/S_Wooden_Picture_Frame_uijufcgiw_lod3_Var1.S_Wooden_Picture_Frame_uijufcgiw_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Picture_Frame_uiivbhniw/S_Wooden_Picture_Frame_uiivbhniw_lod3_Var1.S_Wooden_Picture_Frame_uiivbhniw_lod3_Var1;
-RecentlyPlaced=/Script/Engine.SceneCapture2D;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2210,6 +2210,7 @@ None=======
 /Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low_Material_OcclusionRoughnessMetallic.Chandelier_low_Material_OcclusionRoughnessMetallic=1
 /Game/Group_Assets/Aziz/Assets/Chandelier/MM_Chandelier.MM_Chandelier=1
 /Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low.Chandelier_low=1
+/Game/Group_Assets/Aziz/Assets/Chandelier/ChandelierGlass_low.ChandelierGlass_low=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -2421,7 +2422,7 @@ UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHa
 BRUSH=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBX=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBXAnim=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
-GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/GrandPiano/Metronome/Metronome_low.fbx
+GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/Chandelier/ChandelierGlass_low.fbx
 GenericExport=../../../../../../Users/igfxd/OneDrive/Documents/FMP Submission/Assets/door/DoorReUV.FBX
 GenericOpen=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 GenericSave=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
