--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -437,7 +437,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object="\"Object\" "
 None=======
 None=======
 GeneralProjectSettings="\"Object\" "
@@ -549,7 +549,7 @@ PrimitiveComponent="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" \"Object.ParameterGroups.ParameterGroups[2].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionTextureSample="\"Object\" "
@@ -1826,6 +1826,7 @@ SceneCapture2D.Replication=True
 SceneCapture2D.HLOD=True
 SceneCapture2D.Networking=True
 SceneCapture2D.Input=True
+Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1921,7 +1922,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -1949,26 +1950,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Chandelier/ChandelierGlass_low
-MRUItem1=/Game/Living_Room
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low
-MRUItem3=/Game/Group_Assets/Aziz/Assets/Chandelier/MM_Chandelier
-MRUItem4=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low_Material_OcclusionRoughnessMetallic
-MRUItem5=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low
-MRUItem6=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem7=/Game/Group_Assets/Aziz/Assets/StepStool/MI_StepStool
-MRUItem8=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_BaseColor
-MRUItem9=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_StepStool
-MRUItem10=/Game/Group_Assets/Aziz/Assets/Metronome/Metronome_low
-MRUItem11=/Game/Group_Assets/Aziz/Assets/Metronome/MI_Metronome
-MRUItem12=/Game/Group_Assets/Aziz/Assets/RockingChair/MI_RockingChair
-MRUItem13=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_Sofa2m
-MRUItem14=/Game/Group_Assets/Aziz/Assets/Sofa1m/MI_Sofa1m
-MRUItem15=/Game/Group_Assets/Aziz/Assets/Pillows/MI_SofaPillows
-MRUItem16=/Game/Group_Assets/Aziz/Assets/Piano/MI_Piano
-MRUItem17=/Game/Group_Assets/Aziz/Assets/Lamp/MM_LampBody
-MRUItem18=/Game/Group_Assets/Aziz/Assets/Metronome/Metronome_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem19=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/rendertarget
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Chandelier/MI_ConcreteRoofHanger
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low_Material_001_OcclusionRoughnessMetallic
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Chandelier/ChandelierGlass_low
+MRUItem5=/Game/Group_Assets/Aziz/Assets/Chandelier/MM_Chandelier
+MRUItem6=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low_Material_OcclusionRoughnessMetallic
+MRUItem7=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low
+MRUItem8=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem9=/Game/Group_Assets/Aziz/Assets/StepStool/MI_StepStool
+MRUItem10=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low_DefaultMaterial_BaseColor
+MRUItem11=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_StepStool
+MRUItem12=/Game/Group_Assets/Aziz/Assets/Metronome/Metronome_low
+MRUItem13=/Game/Group_Assets/Aziz/Assets/Metronome/MI_Metronome
+MRUItem14=/Game/Group_Assets/Aziz/Assets/RockingChair/MI_RockingChair
+MRUItem15=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_Sofa2m
+MRUItem16=/Game/Group_Assets/Aziz/Assets/Sofa1m/MI_Sofa1m
+MRUItem17=/Game/Group_Assets/Aziz/Assets/Pillows/MI_SofaPillows
+MRUItem18=/Game/Group_Assets/Aziz/Assets/Piano/MI_Piano
+MRUItem19=/Game/Group_Assets/Aziz/Assets/Lamp/MM_LampBody
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2211,6 +2212,8 @@ None=======
 /Game/Group_Assets/Aziz/Assets/Chandelier/MM_Chandelier.MM_Chandelier=1
 /Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low.Chandelier_low=1
 /Game/Group_Assets/Aziz/Assets/Chandelier/ChandelierGlass_low.ChandelierGlass_low=1
+/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low_Material_001_OcclusionRoughnessMetallic.Chandelier_low_Material_001_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Aziz/Assets/Chandelier/MI_ConcreteRoofHanger.MI_ConcreteRoofHanger=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
