--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1307,6 +1307,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Actor.Rendering=True
 Actor.Replication=True
 Actor.Collision=True
@@ -1826,7 +1827,6 @@ SceneCapture2D.Replication=True
 SceneCapture2D.HLOD=True
 SceneCapture2D.Networking=True
 SceneCapture2D.Input=True
-Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1950,10 +1950,10 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Chandelier/MI_ConcreteRoofHanger
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low_Material_001_OcclusionRoughnessMetallic
-MRUItem3=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Chandelier/MI_ConcreteRoofHanger
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low_Material_001_OcclusionRoughnessMetallic
 MRUItem4=/Game/Group_Assets/Aziz/Assets/Chandelier/ChandelierGlass_low
 MRUItem5=/Game/Group_Assets/Aziz/Assets/Chandelier/MM_Chandelier
 MRUItem6=/Game/Group_Assets/Aziz/Assets/Chandelier/Chandelier_low_Material_OcclusionRoughnessMetallic
@@ -2019,8 +2019,8 @@ None=======
 None=======
 None=======
 None=======
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Chandelier/MM_Chandelier.MM_Chandelier;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Chandelier/MM_Chandelier.MM_Chandelier;
 RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFactorySphereReflectionCapture_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/StepStool/StepStool_low.StepStool_low;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Metronome/Metronome_low.Metronome_low;
@@ -2425,7 +2425,7 @@ UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHa
 BRUSH=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBX=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBXAnim=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
-GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/Chandelier/ChandelierGlass_low.fbx
+GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/Chandelier/Chandelier_low_Material.001_BaseColor.png
 GenericExport=../../../../../../Users/igfxd/OneDrive/Documents/FMP Submission/Assets/door/DoorReUV.FBX
 GenericOpen=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 GenericSave=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
