--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1842,6 +1842,7 @@ SceneCapture2D.Input=True
 MaterialExpressionFunctionInput.MaterialExpressionFunctionInput=True
 MaterialExpressionFunctionInput.MaterialExpression=True
 GLTFProxyOptions.Material=True
+Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1965,26 +1966,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem3=/Game/Group_Assets/Aziz/Assets/Vases/MI_Vases
-MRUItem4=/Game/Group_Assets/Modular/Attic_Parts/Ceiling_Planks_Ceiling_Planks_02
-MRUItem5=/Game/Attic
-MRUItem6=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
-MRUItem7=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1
-MRUItem8=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony_2
-MRUItem9=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony
-MRUItem10=/Game/Neglect/M3/charassets/poop02_SM_Door_02_low
-MRUItem11=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst_Inst
-MRUItem12=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst1
-MRUItem13=/Game/Group_Assets/Tashan/frontdoor/sm_frontdoor
-MRUItem14=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw/MI_Damaged_Picture_Frame_ukpidjpaw_2K_Inst
-MRUItem15=/Game/Assets/Tashan/stairs/mat_trim
-MRUItem16=/Game/Assets/Tashan/stairs/trim_lowerwal
-MRUItem17=/Game/Assets/Tashan/stairs/Stairsidestraight
-MRUItem18=/Game/Assets/Tashan/M4/Tashan/Assets/windows/windows_Cube_002
-MRUItem19=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Vases/MI_FancyVase
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots
+MRUItem5=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem6=/Game/Group_Assets/Aziz/Assets/Vases/MI_Vases
+MRUItem7=/Game/Group_Assets/Modular/Attic_Parts/Ceiling_Planks_Ceiling_Planks_02
+MRUItem8=/Game/Attic
+MRUItem9=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
+MRUItem10=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1
+MRUItem11=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony_2
+MRUItem12=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony
+MRUItem13=/Game/Neglect/M3/charassets/poop02_SM_Door_02_low
+MRUItem14=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst_Inst
+MRUItem15=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst1
+MRUItem16=/Game/Group_Assets/Tashan/frontdoor/sm_frontdoor
+MRUItem17=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw/MI_Damaged_Picture_Frame_ukpidjpaw_2K_Inst
+MRUItem18=/Game/Assets/Tashan/stairs/mat_trim
+MRUItem19=/Game/Assets/Tashan/stairs/trim_lowerwal
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2036,6 +2037,9 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low.Vase_low;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots.SM_LargePots;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wood_Boards_ricaS/S_Old_Wood_Boards_ricaS_lod3_Var2.S_Old_Wood_Boards_ricaS_lod3_Var2;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wood_Boards_ricaS/S_Old_Wood_Boards_ricaS_lod3_Var5.S_Old_Wood_Boards_ricaS_lod3_Var5;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wood_Boards_ricaS/S_Old_Wood_Boards_ricaS_lod3_Var1.S_Old_Wood_Boards_ricaS_lod3_Var1;
@@ -2053,9 +2057,6 @@ RecentlyPlaced=/Game/Megascans/Surfaces/Cracked_Wall_Plaster_ulgkfg3lw/MI_Cracke
 RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Ceiling/Ceiling_Ceiling_Fancy_07.Ceiling_Ceiling_Fancy_07;
 RecentlyPlaced=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst1_2.MAT_TRIMS_Inst1_Inst1_2;
 RecentlyPlaced=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony_2.MAT_TRIMS_DoorMahogony_2;
-RecentlyPlaced=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony.MAT_TRIMS_DoorMahogony;
-RecentlyPlaced=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst1.MAT_TRIMS_Inst1_Inst1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw/MI_Damaged_Picture_Frame_ukpidjpaw_2K_Inst.MI_Damaged_Picture_Frame_ukpidjpaw_2K_Inst;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2258,6 +2259,9 @@ None=======
 /Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots_DefaultMaterial_OcclusionRoughnessMetallic.SM_LargePots_DefaultMaterial_OcclusionRoughnessMetallic=1
 /Game/Group_Assets/Aziz/Assets/Vases/MI_Vases.MI_Vases=1
 /Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots.SM_LargePots=1
+/Game/Group_Assets/Aziz/Assets/Vases/Vase_low_DefaultMaterial_OcclusionRoughnessMetallic.Vase_low_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Aziz/Assets/Vases/MI_FancyVase.MI_FancyVase=1
+/Game/Group_Assets/Aziz/Assets/Vases/Vase_low.Vase_low=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -2475,7 +2479,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/GroupMorriganHall/MorriganHall/MorriganHall 5.2/Content
+UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHall 5.2/Content
 BRUSH=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBX=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBXAnim=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
@@ -3545,9 +3549,9 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=E:/Program Files/Unreal Engine/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=E:/Program Files/Unreal Engine/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
