--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -160,6 +160,7 @@ GridEnabled=False
 SnapScaleEnabled=False
 CurrentRotGridSize=0
 CurrentScalingGridSize=4
+RotGridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Living_Room
@@ -173,6 +174,7 @@ MRUItem6=/Game/abandonedroom_Migration
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 SceneCaptureCube=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
@@ -358,7 +360,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Vases
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/SheetMusic
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -442,7 +444,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object="\"Object\" "
 None=======
 None=======
 GeneralProjectSettings="\"Object\" "
@@ -554,7 +556,7 @@ PrimitiveComponent="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" "
+MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionTextureSample="\"Object\" "
@@ -699,6 +701,17 @@ SceneCapture2D="\"Object\" "
 MaterialExpressionFunctionInput="\"Object\" "
 MaterialExpressionBumpOffset="\"Object\" "
 GLTFProxyOptions="\"Object\" "
+DeformMeshPolygonsTransformProperties="\"Object\" "
+SculptBrushProperties="\"Object\" "
+VertexBrushSculptProperties="\"Object\" "
+VertexBrushAlphaProperties="\"Object\" "
+MeshSymmetryProperties="\"Object\" "
+StandardSculptBrushOpProps="\"Object\" "
+MeshSculptBrushOpProps="\"Object\" "
+SecondarySmoothBrushOpProps="\"Object\" "
+BaseSmoothBrushOpProps="\"Object\" "
+MeshEditingViewProperties="\"Object\" "
+MeshSpaceDeformerToolProperties="\"Object\" "
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1317,6 +1330,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 None=======
 None=======
 None=======
@@ -1842,7 +1856,19 @@ SceneCapture2D.Input=True
 MaterialExpressionFunctionInput.MaterialExpressionFunctionInput=True
 MaterialExpressionFunctionInput.MaterialExpression=True
 GLTFProxyOptions.Material=True
-Texture2D.Interchange =True
+DeformMeshPolygonsTransformProperties.Options=True
+DeformMeshPolygonsTransformProperties.Selection=True
+DeformMeshPolygonsTransformProperties.Display=True
+SculptBrushProperties.Brush=True
+VertexBrushSculptProperties.Sculpting=True
+VertexBrushAlphaProperties.Alpha=True
+MeshSymmetryProperties.Symmetry=True
+StandardSculptBrushOpProps.SculptBrush=True
+SecondarySmoothBrushOpProps.ShiftSmoothBrush=True
+MeshEditingViewProperties.Rendering=True
+MeshSpaceDeformerToolProperties.Options=True
+MeshSpaceDeformerToolProperties.Gizmo=True
+MeshSpaceDeformerToolActionPropertySet.Gizmo=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1966,26 +1992,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Vases/MI_FancyVase
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem3=/Game/Living_Room
-MRUItem4=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots
-MRUItem5=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem6=/Game/Group_Assets/Aziz/Assets/Vases/MI_Vases
-MRUItem7=/Game/Group_Assets/Modular/Attic_Parts/Ceiling_Planks_Ceiling_Planks_02
-MRUItem8=/Game/Attic
-MRUItem9=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
-MRUItem10=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1
-MRUItem11=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony_2
-MRUItem12=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony
-MRUItem13=/Game/Neglect/M3/charassets/poop02_SM_Door_02_low
-MRUItem14=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst_Inst
-MRUItem15=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst1
-MRUItem16=/Game/Group_Assets/Tashan/frontdoor/sm_frontdoor
-MRUItem17=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw/MI_Damaged_Picture_Frame_ukpidjpaw_2K_Inst
-MRUItem18=/Game/Assets/Tashan/stairs/mat_trim
-MRUItem19=/Game/Assets/Tashan/stairs/trim_lowerwal
+MRUItem0=/Game/Group_Assets/Aziz/Assets/SheetMusic/MM_SheetMusicBeethoven
+MRUItem1=/Game/Living_Room
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Vases/MI_FancyVase
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem5=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots
+MRUItem6=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem7=/Game/Group_Assets/Aziz/Assets/Vases/MI_Vases
+MRUItem8=/Game/Group_Assets/Modular/Attic_Parts/Ceiling_Planks_Ceiling_Planks_02
+MRUItem9=/Game/Attic
+MRUItem10=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
+MRUItem11=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1
+MRUItem12=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony_2
+MRUItem13=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony
+MRUItem14=/Game/Neglect/M3/charassets/poop02_SM_Door_02_low
+MRUItem15=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst_Inst
+MRUItem16=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst1
+MRUItem17=/Game/Group_Assets/Tashan/frontdoor/sm_frontdoor
+MRUItem18=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw/MI_Damaged_Picture_Frame_ukpidjpaw_2K_Inst
+MRUItem19=/Game/Assets/Tashan/stairs/mat_trim
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2037,6 +2063,11 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SheetMusic/MM_SheetMusicBeethoven.MM_SheetMusicBeethoven;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SheetMusic/BeethovenSheet1.BeethovenSheet1;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SheetMusic/BeethovenSheet2.BeethovenSheet2;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SheetMusic/BeethovenSheet3.BeethovenSheet3;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SheetMusic/BeethovenSheet4.BeethovenSheet4;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low.Vase_low;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots.SM_LargePots;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2052,11 +2083,6 @@ RecentlyPlaced=/Game/Group_Assets/Modular/Attic_Parts/Beams_Modular_01_Beam_Smal
 RecentlyPlaced=/Game/Group_Assets/Modular/Attic_Parts/Beams_Modular_01_Beam_Large_01.Beams_Modular_01_Beam_Large_01;
 RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2;
 RecentlyPlaced=/Game/Group_Assets/Modular/Attic_Parts/Ceiling_Planks_Ceiling_Planks_01.Ceiling_Planks_Ceiling_Planks_01;
-RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x4.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x4;
-RecentlyPlaced=/Game/Megascans/Surfaces/Cracked_Wall_Plaster_ulgkfg3lw/MI_Cracked_Wall_Plaster_ulgkfg3lw_2K_Inst.MI_Cracked_Wall_Plaster_ulgkfg3lw_2K_Inst;
-RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Ceiling/Ceiling_Ceiling_Fancy_07.Ceiling_Ceiling_Fancy_07;
-RecentlyPlaced=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst1_2.MAT_TRIMS_Inst1_Inst1_2;
-RecentlyPlaced=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony_2.MAT_TRIMS_DoorMahogony_2;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2262,6 +2288,7 @@ None=======
 /Game/Group_Assets/Aziz/Assets/Vases/Vase_low_DefaultMaterial_OcclusionRoughnessMetallic.Vase_low_DefaultMaterial_OcclusionRoughnessMetallic=1
 /Game/Group_Assets/Aziz/Assets/Vases/MI_FancyVase.MI_FancyVase=1
 /Game/Group_Assets/Aziz/Assets/Vases/Vase_low.Vase_low=1
+/Game/Group_Assets/Aziz/Assets/SheetMusic/MM_SheetMusicBeethoven.MM_SheetMusicBeethoven=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -2483,7 +2510,7 @@ UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHa
 BRUSH=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBX=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBXAnim=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
-GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/Chandelier/Chandelier_low_Material.001_BaseColor.png
+GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/Vases/Vase_low.fbx
 GenericExport=../../../../../../Users/igfxd/OneDrive/Documents/FMP Submission/Assets/door/DoorReUV.FBX
 GenericOpen=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 GenericSave=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
